[package]
name = "rocket_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
postgres = "0.19.4"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
rocket_contrib = "0.4.11"
